--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			<div class="tip" id="tip1">
 				<h2>Dica 1: Capa</h2>
 				<p>Utilize fonte Arial ou Times New Roman, tamanho 14, para o título do trabalho. Inclua o nome do autor e título, no final da página adicione o nome da cidade
-				   Importante: A margem deve ter 3cm de distância na parte superior e do lado direito da página, e 2cm de distância da parte inferior e do lado esquerdo da página</p>
+				   Importante: A margem deve ter 3cm de distância na parte superior e do lado esquerdo da página, e 2cm de distância da parte inferior e do lado direito da página</p>
 				<img src="img/capa.png" alt="Imagem 1">
 				<a id="botao-link" href="https://docs.google.com/document/d/1tdD6fEadcHpVIvwpC8PrqnFHLgO9U1HJllS4Un86pk8/edit?usp=sharing" target="_blank">Download Capa</a>
 
@@ -28,7 +28,7 @@
 			<div class="tip" id="tip2">
 				<h2>Dica 2: Contra-Capa</h2>
 				<p>Utilize fonte Arial ou Times New Roman, tamanho 14, para o título do trabalho. Inclua o nome do autor e título novamente, escreva uma breve texto sobre o objetivo do trabalho e no final da página adicione o nome da cidade
-				   Importante: A margem deve ter 3cm de distância na parte superior e do lado direito da página, e 2cm de distância da parte inferior e do lado esquerdo da página</p>
+				  Importante: A margem deve ter 3cm de distância na parte superior e do lado esquerdo da página, e 2cm de distância da parte inferior e do lado direito da página</p>
 				<img src="img/contracapa.png" alt="Imagem 2">
 				<a id="botao-link" href="https://docs.google.com/document/d/1uXsGvRDTaOy-nj7LSlxj8i2vSsx-nVk_7kUfdl7wYZo/edit?usp=sharing" target="_blank">Download Contra Capa</a>
 
